--- a/style.css
+++ b/style.css
@@ -5,8 +5,11 @@
 }
 
 body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
     margin: 0;
-    margin-top: 0
+    margin-top: 0;
 }
 
 p {
@@ -27,6 +30,7 @@ p {
     object-fit: fill;
     border-radius: 50%;
     margin: auto;
+    margin-bottom: 24pt;
 }
 
 /* Navbar */
@@ -79,7 +83,7 @@ p {
 /* box1 h1 */
 .box1 h1 {
     margin: 0;
-    margin-top: 24pt;
+    /* margin-top: 24pt; */
     padding-bottom: 24pt;
     color: #444B6E;
     font-weight: bolder;
@@ -200,6 +204,7 @@ footer {
     font-family: "DM Sans", sans-serif;
     padding: 12pt;
     overflow: hidden;
+    margin-top: auto;
 }
 
 footer h3 {
