--- a/style.css
+++ b/style.css
@@ -4,6 +4,13 @@
     text-align: center;
 }
 
+h1 {
+    margin: 0;
+    padding-bottom: 24pt;
+    font-family: "DM Serif Display", serif;
+    font-size: 60pt;
+}
+
 body {
     min-height: 100vh;
     min-width: 100%;
@@ -85,11 +92,8 @@ p {
 
 /* box1 h1 */
 .box1 h1 {
-    margin: 0;
-    padding-bottom: 24pt;
     color: #444B6E;
     font-weight: bolder;
-    font-family: "DM Serif Display", serif;
     font-size: 60pt;
 }
 
@@ -240,31 +244,36 @@ footer div {
 }
 
 /* content box with image background */
-.img-box {
-    background: url("./assets/poppy2.jpeg") 50% no-repeat;
-    background-size: cover;
-    min-height: 50ch;
+/* id for poppy image */
+#poppy2 {
     max-width: 100%;
-    padding: 24pt;
-    margin: auto;
+    max-height: 100%;
+    overflow: hidden;
+    object-fit: cover;
 }
 
-.img-box .content-box1 {
-    position: relative;
+/* .img-container {
+    background: url("./assets/poppy2.jpeg") 50% no-repeat;
+    background-size: 100%;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    max-height: 100vh;
+    width: 100vw;
+} */
+
+.img-container .content-box1 {
+    position: absolute;
+    /* margin: 25%; */
+    justify-content: center;
     background-color: #ffffff99;
+    margin: 12%;
     padding: 24pt;
     border-radius: 24pt;
-    margin: 24pt;
-    max-width: 50ch;
 }
 
-.img-box .content-box1 h1 {
-    margin: 0;
-    padding-bottom: 24pt;
+.img-container .content-box1 h1 {
     color: #444B6E;
-    font-weight: bolder;
-    font-family: "DM Serif Display", serif;
-    font-size: 60pt;
 }
 
 /* small screens */
@@ -300,5 +309,30 @@ footer div {
         justify-content: space-around;
     }
 
+    #poppy2 {
+        max-width: 100%;
+        max-height: 100%;
+        min-height: 50vh;
+        overflow: hidden;
+        object-fit: cover;
+    }
+
+    .img-container {
+        display: flex;
+        flex-direction: column;
+        align-items: self-start;
+        width: 100vw;
+        max-height: 100vh;
+        /* margin-bottom: 100%; */
+        /* max-height: auto; */
+        /* overflow: hidden; */
+    }
+    
+    .img-container .content-box1 {
+        
+        max-width: 100ch;
+        margin: 0%;
+        background-color: transparent;
+    }
 }
 
