--- a/style.css
+++ b/style.css
@@ -244,43 +244,37 @@ footer div {
 }
 
 /* content box with image background */
-/* id for poppy image */
-#poppy2 {
+.img-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.img-container img {
+    position: relative;
     max-width: 100%;
-    max-height: 100%;
+    max-height: 75vh;
     overflow: hidden;
     object-fit: cover;
 }
 
-/* .img-container {
-    background: url("./assets/poppy2.jpeg") 50% no-repeat;
-    background-size: 100%;
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    max-height: 100vh;
-    width: 100vw;
-} */
-
 .img-container .content-box1 {
     position: absolute;
-    /* margin: 25%; */
-    justify-content: center;
-    background-color: #ffffff99;
-    margin: 12%;
+    margin: 24pt;
     padding: 24pt;
+    background-color: #ffffff99;
     border-radius: 24pt;
+    max-width: 75ch;
 }
 
 .img-container .content-box1 h1 {
-    color: #444B6E;
+    color: #444b6e;
 }
 
 /* small screens */
 @media all and (max-width: 500px) {
-    img {
+    /* img {
         display: none;
-    }
+    } */
 
     .topnav {
         flex-direction: column;
@@ -291,6 +285,21 @@ footer div {
         display: flex;
         flex-direction: column;
         justify-content: space-around;
+    }
+
+    .img-container {
+        align-items: self-start;
+        width: 100%;
+        max-height: 100%;
+        overflow: hidden;
+     } 
+    
+    .img-container .content-box1 {
+        position: inherit;
+    }
+
+    .img-container .content-box1 h1 {
+        font-size: 38pt;
     }
 }
 
@@ -309,30 +318,16 @@ footer div {
         justify-content: space-around;
     }
 
-    #poppy2 {
-        max-width: 100%;
-        max-height: 100%;
-        min-height: 50vh;
-        overflow: hidden;
-        object-fit: cover;
-    }
-
     .img-container {
-        display: flex;
-        flex-direction: column;
         align-items: self-start;
-        width: 100vw;
-        max-height: 100vh;
-        /* margin-bottom: 100%; */
-        /* max-height: auto; */
-        /* overflow: hidden; */
-    }
+        width: 100%;
+        max-height: 100%;
+        overflow: hidden;
+     } 
     
     .img-container .content-box1 {
-        
-        max-width: 100ch;
-        margin: 0%;
-        background-color: transparent;
+        position: inherit;
+        max-width: 100vw;
     }
 }
 
