--- a/style.css
+++ b/style.css
@@ -4,33 +4,54 @@
     text-align: center;
 }
 
+/* headers */
 h1 {
-    margin: 0;
-    padding-bottom: 24pt;
+    /* margin: 0; */
+    /* padding-bottom: 24pt; */
     font-family: "DM Serif Display", serif;
     font-size: 60pt;
+    font-weight: bolder;
+}
+
+h2 {
+    /* margin: 0; */
+    font-size: 32pt;
+    font-family: "DM Serif Display", serif;
+}
+
+h3 {
+    /* margin: 0; */
+    font-size: 20pt;
+    font-family: "DM Serif Display", serif;
+}
+
+h4 {
+    /* margin: 0; */
+    font-family: "DM Serif Display", serif;
+    font-size: 12pt;
+}
+
+p {
+    /* margin: 0; */
+    font-size: 16pt;
+    line-height: 2.5;
 }
 
 body {
     min-height: 100vh;
-    min-width: 100%;
+    min-width: 100vw;
     display: flex;
     flex-direction: column;
     margin: 0;
     margin-top: 0;
 }
 
-p {
-    margin: 0;
-    font-size: 16pt;
-    line-height: 2.5;
-}
-
+/* main container */
 .main {
     /* max-width: 1080px; */
     margin-left: auto;
     margin-right: auto;
-    min-width: 100%;
+    min-width: 100vw;
 }
 
 #main-image {
@@ -90,27 +111,21 @@ p {
     padding: 24pt;
 }
 
-/* box1 h1 */
+/* header modifiers for box 1 */
 .box1 h1 {
     color: #444B6E;
-    font-weight: bolder;
-    font-size: 60pt;
 }
 
-/* box1 h2 */
 .box1 h2 {
-    margin: auto;
-    padding-bottom: 24pt;
     color: #444B6E;
-    font-size: 32pt;
-    font-family: "DM Serif Display", serif;
 }
 
 .box1 h3 {
-    margin: auto;
-    color: #444b6e;
-    font-size: 20pt;
-    font-family: "DM Serif Display", serif;
+    color: #444B6E;
+}
+
+.box1 h4 {
+    color: #444B6E;
 }
 
 /* flexbox 2 */
@@ -123,20 +138,22 @@ p {
     min-height: 36ch;
 }
 
-.box2 h2 {
-    margin: auto;
-    margin-bottom: 24pt;
-    padding: 0;
+
+/* header modifiers for box2 */
+.box2 h1 {
     color: #495B4C;
-    font-size: 32pt;
-    font-family: "DM Serif Display";
+}
+
+.box2 h2 {
+    color: #495B4C;
 }
 
 .box2 h3 {
-    margin: auto;
-    color: #495b4c;
-    font-size: 20pt;
-    font-family: "DM Serif Display", serif;
+    color: #495B4C;
+}
+
+.box2 h4 {
+    color: #495B4C;
 }
 
 /* flexbox 3 */
@@ -149,33 +166,29 @@ p {
     min-height: 36ch;
 }
 
-.box3 h2 {
-    margin: 0;
-    margin-bottom: 24pt;
-    padding: 0;
+/* header modifiers for box3 */
+.box3 h1 {
     color: #3D315B;
-    font-size: 32pt;
-    font-family: "DM Serif Display";
+}
+
+.box3 h2 {
+    color: #3D315B;
 }
 
 .box3 h3 {
-    margin: auto;
     color: #3D315B;
-    font-size: 20pt;
-    font-family: "DM Serif Display", serif;
+}
+
+.box3 h4 {
+    color: #3D315B;
 }
 
 /* hbox */
 .hbox {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
     margin: auto;
-}
-
-.hbox + div {
-    margin-right: 16pt;
-    margin-left: 16pt;
 }
 
 /* large button */
@@ -203,14 +216,14 @@ p {
     display: flex;
     flex-direction: column;
     max-width: 100ch;
-    margin: auto;
-    
+    align-self: center;
+    align-content: center;
+    /* margin: auto; */
+    margin: 24pt;
+
 }
 
-.content-box1 h3 {
-    padding-bottom: 12pt;
-}
-
+/* footer */
 footer {
     background: #444b6e;
     color: white;
@@ -224,6 +237,7 @@ footer {
 footer h3 {
     font-size: 16pt;
     font-family: "DM Serif Display", serif;
+    color: white;
 }
 
 footer a {
@@ -263,6 +277,7 @@ footer div {
     position: absolute;
     margin: 24pt;
     padding: 24pt;
+    align-self: auto;
     background-color: #ffffff99;
     border-radius: 24pt;
     max-width: 75ch;
@@ -292,6 +307,10 @@ footer div {
 
     .content-box1 h3 {
         font-size: 16pt;
+    }
+
+    .content-box1 h4 {
+        font-size: 12pt;
     }
 
     .topnav {
@@ -348,11 +367,10 @@ footer div {
 
     .topnav {
         justify-content: space-around;
-    }
+    } 
 
     .img-container {
-        align-items: self-start;
-        width: 100%;
+        width: 100vw;
         height: auto;
         overflow: hidden;
      } 
