--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 /* headers */
 h1 {
-    margin-bottom: 0;
+    margin: 16pt 0pt;
     /* padding-bottom: 24pt; */
     font-family: "DM Serif Display", serif;
     font-size: 60pt;
@@ -14,19 +14,19 @@ h1 {
 }
 
 h2 {
-    margin-bottom: 0;
+    margin: 12pt 0pt;
     font-size: 32pt;
     font-family: "DM Serif Display", serif;
 }
 
 h3 {
-    margin-bottom: 0;
+    margin: 8pt 0pt;
     font-size: 20pt;
     font-family: "DM Serif Display", serif;
 }
 
 h4 {
-    margin-bottom: 0;
+    margin: 4pt 0pt;
     font-family: "DM Serif Display", serif;
     font-size: 12pt;
 }
