--- a/style.css
+++ b/style.css
@@ -61,9 +61,7 @@ body {
 .main {
     /* max-width: 1080px; */
     display: grid;
-    /* grid-template-columns: 1fr 1fr; */
-    /* margin-left: auto;
-    margin-right: auto; */
+    grid-template-columns: 1fr 1fr;
     align-items: top;
 
 }
