--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ body {
     display: grid;
     grid-template-columns: 1fr 1fr;
     align-items: top;
-
+    margin: 0% 12.5%;
 }
 
 ul {
@@ -250,8 +250,8 @@ footer div {
 }
 
 .cell-full-width p {
-    margin-left: 12.5%;
-    margin-right: 12.5%;
+    /* margin-left: 12.5%;
+    margin-right: 12.5%; */
     /* align-self: center center; */
 }
 
