--- a/style.css
+++ b/style.css
@@ -1,446 +1,403 @@
 /* main font */
 * {
-    font-family: "DM Sans", sans-serif;
-    text-align: center;
+  font-family: "DM Sans", sans-serif;
+  text-align: center;
 }
 
 /* headers */
 h1 {
-    margin: 20pt 0pt;
-    /* padding-bottom: 24pt; */
-    font-family: "DM Serif Display", serif;
-    font-size: 144px;
-    font-weight: bolder;
-    color: #444B6E;
+  margin: 20pt 0pt;
+  /* padding-bottom: 24pt; */
+  font-family: "DM Serif Display", serif;
+  font-size: 144px;
+  font-weight: bolder;
+  color: #444b6e;
 }
 
 h2 {
-    margin: 14pt 0pt;
-    font-size: 72px;
-    font-family: "DM Serif Display", serif;
-    color: #495B4C;
+  margin: 14pt 0pt;
+  font-size: 72px;
+  font-family: "DM Serif Display", serif;
+  color: #495b4c;
 }
 
 h3 {
-    margin: 8pt 0pt;
-    font-size: 36pt;
-    font-family: "DM Serif Display", serif;
-    color: #444B6E;
+  margin: 8pt 0pt;
+  font-size: 36pt;
+  font-family: "DM Serif Display", serif;
+  color: #444b6e;
 }
 
 h4 {
-    margin: 4pt 0pt;
-    font-family: "DM Serif Display", serif;
-    font-size: 24pt;
-    color: #495B4C;
+  margin: 4pt 0pt;
+  font-family: "DM Serif Display", serif;
+  font-size: 24pt;
+  color: #495b4c;
 }
 
 h5 {
-    margin: 4pt 0pt;
-    font-family: "DM Serif Display", serif;
-    font-size: 16pt;
-    color: #444B6E
+  margin: 4pt 0pt;
+  font-family: "DM Serif Display", serif;
+  font-size: 16pt;
+  color: #444b6e;
 }
 
 p {
-    /* margin: 0; */
-    font-size: 16pt;
-    line-height: 1.5;
+  /* margin: 0; */
+  font-size: 16pt;
+  line-height: 1.5;
 }
 
 body {
-    min-height: 100vh;
-    min-width: 100vw;
-    display: flex;
-    flex-direction: column;
-    margin: 0;
-    margin-top: 0;
-}
-
-/* main container */
-.main {
-    /* max-width: 1080px; */
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    align-items: top;
-    margin: 0% 12.5%;
+  min-height: 100vh;
+  /* min-width: 100vw; */
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  margin-top: 0;
 }
 
 ul {
-    display: inline-block;
-    list-style-position: inside;
-    margin: auto;
+  padding: 0;
+  display: inline-block;
+  list-style-position: inside;
+  margin: auto;
 }
 
 ul li {
-    font-size: 28px;
-    text-align: left !important;
-    font-family: "DM Serif Display";
-    color:#444B6E;
+  font-size: 28px;
+  text-align: left !important;
+  font-family: "DM Serif Display";
+  color: #444b6e;
 }
 
-#current-job ul {
-    margin-bottom: 24px;
+ul li {
+  font-size: 20px;
 }
 
-#current-job ul li {
-    font-size: 20px;
-}
-
-ul li ul li {
-    font-size: 20px;
+ul {
+  margin-bottom: 24px;
 }
 
 #main-image {
-    min-height: scale-down;
-    max-height: max-content;
-    max-width: 50%;
-    object-fit: fill;
-    border-radius: 50%;
-    margin: auto;
-    margin-bottom: 24pt;
+  min-height: scale-down;
+  max-height: max-content;
+  max-width: 50%;
+  object-fit: fill;
+  border-radius: 50%;
+  margin: auto;
+  margin-bottom: 24pt;
 }
 
 /* Navbar */
 .topnav {
-    /* position: fixed; */
-    top: 0;
-    display: flex;
-    justify-content: flex-end;
-    font-family: "DM Sans", sans-serif;
-    background-color: #9AB87A50;
-    padding: 12pt;
-    overflow: hidden;
+  /* position: fixed; */
+  top: 0;
+  display: flex;
+  justify-content: flex-end;
+  font-family: "DM Sans", sans-serif;
+  background-color: #9ab87a50;
+  padding: 12pt;
+  overflow: hidden;
 }
 
 /* anchor links in navbar */
 .topnav a {
-    float: right;
-    color: black;
-    text-align: center;
-    border: 2pt solid transparent;
-    padding: 6pt 12pt;
-    font-size: 12pt;
-    text-decoration: none;
-    margin: 0pt 3pt;
+  float: right;
+  color: black;
+  text-align: center;
+  border: 2pt solid transparent;
+  padding: 6pt 12pt;
+  font-size: 12pt;
+  text-decoration: none;
+  margin: 0pt 3pt;
 }
 
 .topnav a:hover {
-    border: 2pt solid #444B6E;
-    border-radius: 50px;
-    transition-duration: 0.4s;
+  border: 2pt solid #444b6e;
+  border-radius: 50px;
+  transition-duration: 0.4s;
 }
 
 .topnav a.active {
-    /* background-color: #c2c1a5; */
-    background-color: #444B6E;
-    border: 2pt solid #444B6E;
-    border-radius: 50px;
-    color: white;
+  /* background-color: #c2c1a5; */
+  background-color: #444b6e;
+  border: 2pt solid #444b6e;
+  border-radius: 50px;
+  color: white;
 }
 
 /* flexbox 1 */
 .box1 {
-    display: flex;
-    flex-flow: row wrap;
-    flex-direction: column;
-    min-height: 36ch;
-    padding: 24pt;
+  display: flex;
+  flex-flow: row wrap;
+  flex-direction: column;
+  min-height: 36ch;
+  padding: 24pt;
 }
 
-h3, h4 {
-    font-weight: lighter;
+h3,
+h4 {
+  font-weight: lighter;
 }
 
-/* large button */
-.large-button {
-    padding: 6px 48px;
-    /* border: 2pt solid #444B6E; */
-    background-color: #444B6E;
-    border-radius: 50pt;
-    color: white;
-    text-align: center;
-    text-decoration: none;
-    max-width: max-content;
-    box-shadow: #444B6E50 4px 4px 3px;
+/* filled button */
+.filled-button {
+  padding: 6px 48px;
+  /* border: 2pt solid #444B6E; */
+  background-color: #444b6e;
+  border-radius: 50pt;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  max-width: max-content;
+  box-shadow: #444b6e50 4px 4px 3px;
+  /* margin-block-start: auto; */
 }
 
-.large-button:hover {
-    background-color: #495B4C80;
-    color: black;
-    transition-duration: 0.4s;
+.filled-button:hover {
+  background-color: #495b4c80;
+  color: black;
+  transition-duration: 0.4s;
 }
 
 /* footer */
 footer {
-    background: #444b6e;
-    color: white;
-    justify-content: center;
-    font-family: "DM Sans", sans-serif;
-    padding: 12pt;
-    overflow: hidden;
-    margin-top: 48px;
+  background: #444b6e;
+  color: white;
+  justify-content: center;
+  font-family: "DM Sans", sans-serif;
+  padding: 12pt;
+  overflow: hidden;
+  margin-top: 48px;
 }
 
 footer h3 {
-    font-size: 16pt;
-    font-family: "DM Serif Display", serif;
-    color: white;
+  font-size: 16pt;
+  font-family: "DM Serif Display", serif;
+  color: white;
 }
 
 footer a {
-    color: white;
-    text-decoration: none;
+  color: white;
+  text-decoration: none;
 }
 
 footer a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 footer div {
-    display: flex;
-    justify-content: space-around;
-    font-family: "DM Sans", sans-serif;
-    padding: 12pt;
-    overflow: hidden;
+  display: flex;
+  justify-content: space-around;
+  font-family: "DM Sans", sans-serif;
+  padding: 12pt;
+  overflow: hidden;
 }
 
-/* content box with image background */
-.img-container {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: auto;
-}
-
-.img-container img {
-    position: relative;
-    max-width: 100%;
-    max-height: 75vh;
-    overflow: hidden;
-    object-fit: cover;
-}
-
-/* GRID */
-.cell {
-    position: relative;
-    margin: auto 24px;
-    /* margin-bottom: 24px; */
-    /* padding: 24pt; */
-    /* gap: 24pt; */
-    min-height: 24ch;
-    max-width: 80ch;
-    vertical-align: bottom;
-}
-
-/* .cell hr {
-    margin: 0% 25%;
-    background-color: #495B4C;
-    height: 2px;
-    max-width: 75%;
-} */
-
-.cell-full-width {
-    /* margin-top: 24pt; */
-    /* padding: 24pt; */
-    grid-column: span 2;
-    margin: auto 0%;
-    margin-bottom: 24px;
-    /* margin-top: 48px; */
-}
-
-.cell-full-width p {
-    /* margin-left: 12.5%;
-    margin-right: 12.5%; */
-    /* align-self: center center; */
-}
-
-.cell-full-width .cell {
-    align-items: center;
-    min-height: 24ch;
-    margin: auto;
-    /* min-width: 100%; */
-}
-
-.cell-full-width h1 {
-    text-align: start;
-    margin: 3% 12.5%;
-    place-self: start; 
-}
-
-.cell-full-width hr {
-    margin: 0% 25%;
-    background-color: #495B4C;
-    height: 2px;
-    max-width: 50%;
-}
-
-.top-level-cell {
-    grid-column: span 2;
-    background-color: #444B6E;
-}
-
-.top-level-cell h1 {
-    text-align: start;
-    margin: 3% 12.5%;
-    color: white;
-}
-/* END GRID */
 
 /* "Experience" Modifiers/Job Info */
 #current-job {
-    border: solid;
-    margin: 24px;
-    border-radius: 24px;
-    border-color: #444B6E;
-    background-color: #444B6E20;
+  border: solid;
+  margin: 24px;
+  border-radius: 24px;
+  border-color: #444b6e;
+  background-color: #444b6e20;
 }
 
 .job-cell {
-    position: relative;
-    margin: auto 24px;
-    /* margin-bottom: 24px; */
-    /* padding: 24pt; */
-    /* gap: 24pt; */
-    min-height: 24ch;
-    max-width: 80ch;
-    vertical-align: bottom;
+  position: relative;
+  margin: auto 24px;
+  /* margin-bottom: 24px; */
+  /* padding: 24pt; */
+  /* gap: 24pt; */
+  min-height: 24ch;
+  max-width: 80ch;
+  vertical-align: bottom;
 }
 
 .job-cell ul {
-    margin-bottom: 24px;
+  margin-bottom: 24px;
 }
 
 .job-cell ul li {
-    font-size: 20px;
-    margin-right: 24px;
+  font-size: 20px;
+  margin-right: 24px;
 }
 
 /* small screens */
 @media all and (max-width: 600px) {
-    /* img {
-        display: none;
-    } */
+ 
+  .cell {
+    /* grid-column: span 2; */
+    /* margin-bottom: 12px; */
+    margin: 24px;
+    min-height: fit-content;
+  }
 
-    .cell {
-        grid-column: span 2;
-        /* margin-bottom: 12px; */
-        margin: 24px;
-        min-height: fit-content;
-    }
+  .job-cell {
+    grid-column: span 2;
+    /* margin-bottom: 12px; */
+    margin: 24px;
+    min-height: fit-content;
+  }
 
-    .job-cell {
-        grid-column: span 2;
-        /* margin-bottom: 12px; */
-        margin: 24px;
-        min-height: fit-content;
-    }
+  p {
+    font-size: 12pt;
+    margin-bottom: 48px;
+  }
 
-    .cell-full-width {
-        margin: 24px;
-    }
+  h1 {
+    font-size: 32pt;
+  }
 
-    p {
-        font-size: 12pt;
-        margin-bottom: 48px;
-    }
+  .top-level-cell h1 {
+    margin: 6%;
+  }
 
-    h1 {
-        font-size: 48pt;
-    }
+  h2 {
+    font-size: 30pt;
+  }
 
-    .top-level-cell h1 {
-        margin: 6%;
-    }
+  h3 {
+    font-size: 24pt;
+  }
 
-    h2 {
-        font-size: 40pt;
-    }
+  h4 {
+    font-size: 20pt;
+  }
 
-    h3 {
-        font-size: 36pt;
-    }
+  .topnav {
+    justify-content: space-around;
+  }
 
-    h4 {
-        font-size: 24pt;
-    }
+  .topnav a {
+    font-size: 10pt;
+  }
 
-    .topnav {
-        flex-direction: column;
-    }
+  .hbox {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
 
-    .topnav a {
-        font-size: 10pt;
-    }
+  .img-container {
+    align-items: self-start;
+    width: 100%;
+    max-height: 100%;
+    overflow: hidden;
+  }
 
-    .hbox {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-    }
+  .img-container .content-box1 {
+    position: inherit;
+  }
 
-    .img-container {
-        align-items: self-start;
-        width: 100%;
-        max-height: 100%;
-        overflow: hidden;
-     } 
-    
-    .img-container .content-box1 {
-        position: inherit;
-    }
+  .img-container .content-box1 {
+    position: inherit;
+    max-width: 100vw;
+    margin: 0;
+    padding: 24pt;
+  }
 
-    .img-container .content-box1 {
-        position: inherit;
-        max-width: 100vw;
-        margin: 0;
-        padding: 24pt;
-    }
+  footer a {
+    font-size: 10pt;
+  }
 
-    footer a {
-        font-size: 10pt;
-    }
-
-    footer h3 {
-        font-size: 12pt;
-    }
+  footer h3 {
+    font-size: 12pt;
+  }
 }
 
 /* medium screens */
 @media all and (max-width: 800px) {
-    .cell {
-        grid-column: span 2;
-        margin-bottom: 48px;
-    }
+  .cell {
+    grid-column: span 2;
+    margin-bottom: 48px;
+  }
 
-    .job-cell {
-        grid-column: span 2;
-        margin-bottom: 48px;
-    }
+  body {
+    text-align: center;
+  }
 
-    body {
-        text-align: center;
-    }
+  .filled-button {
+    margin-left: auto;
+    margin-right: auto;
+  }
 
-    .large-button {
-        margin-left: auto;
-        margin-right: auto;
-    }
+  .topnav {
+    justify-content: space-around;
+  }
 
-    .topnav {
-        justify-content: space-around;
-    } 
+  .img-container {
+    width: 100vw;
+    height: auto;
+    overflow: hidden;
+  }
 
-    .img-container {
-        width: 100vw;
-        height: auto;
-        overflow: hidden;
-     } 
-    
-    .img-container .content-box1 {
-        position: inherit;
-        max-width: 100vw;
-        margin: 0;
-    }
+  .img-container .content-box1 {
+    position: inherit;
+    max-width: 100vw;
+    margin: 0;
+  }
 }
 
+section {
+  width: 100%;
+  /* max-width: 100vw; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+
+.top-level-cell {
+  text-align: start;
+  background-color: #444b6e;
+}
+
+.top-level-cell h1 {
+  color: white;
+  /* text-align: start; */
+  max-width: 80ch;
+  padding-right: auto;
+}
+
+.container {
+  /* width: 100%; */
+  /* max-width: 100vw; */
+  padding: 3rem 2rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.container hr {
+  width: 100%;
+  background-color: #495b4c;
+  height: 2px;
+}
+
+.cell-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 5rem;
+}
+
+.cell-inner {
+  width: 100%;
+  /* padding-inline: 3rem; */
+}
+
+@media screen and (min-width: 800px) {
+  .container {
+    max-width: 80rem;
+  }
+  .cell-wrapper {
+    flex-direction: row;
+    align-items: stretch;
+  }
+  .cell-inner {
+    align-self: stretch;
+  }
+
+}
