--- a/style.css
+++ b/style.css
@@ -225,8 +225,62 @@ footer div {
   margin-right: 24px;
 }
 
+section {
+  width: 100%;
+  /* max-width: 100vw; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+
+.top-level-cell {
+  text-align: start;
+  background-color: #444b6e;
+}
+
+.top-level-cell h1 {
+  color: white;
+  /* text-align: start; */
+  max-width: 80ch;
+  padding-right: auto;
+}
+
+.container {
+  /* width: 100%; */
+  /* max-width: 100vw; */
+  padding: 3rem 2rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.container hr {
+  width: 100%;
+  background-color: #495b4c;
+  height: 2px;
+}
+
+.cell-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 5rem;
+}
+
+.cell-inner {
+  width: 100%;
+  /* padding-inline: 3rem; */
+}
+
 /* small screens */
 @media all and (max-width: 600px) {
+  .cell-wrapper {
+    gap: 0;
+  }
+
+  .container {
+    padding: 0rem 2rem;
+  }
  
   .cell {
     /* grid-column: span 2; */
@@ -248,7 +302,7 @@ footer div {
   }
 
   h1 {
-    font-size: 32pt;
+    font-size: 36pt;
   }
 
   .top-level-cell h1 {
@@ -339,65 +393,4 @@ footer div {
     max-width: 100vw;
     margin: 0;
   }
-}
-
-section {
-  width: 100%;
-  /* max-width: 100vw; */
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-}
-
-.top-level-cell {
-  text-align: start;
-  background-color: #444b6e;
-}
-
-.top-level-cell h1 {
-  color: white;
-  /* text-align: start; */
-  max-width: 80ch;
-  padding-right: auto;
-}
-
-.container {
-  /* width: 100%; */
-  /* max-width: 100vw; */
-  padding: 3rem 2rem;
-  display: flex;
-  flex-direction: column;
-}
-
-.container hr {
-  width: 100%;
-  background-color: #495b4c;
-  height: 2px;
-}
-
-.cell-wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 5rem;
-}
-
-.cell-inner {
-  width: 100%;
-  /* padding-inline: 3rem; */
-}
-
-@media screen and (min-width: 800px) {
-  .container {
-    max-width: 80rem;
-  }
-  .cell-wrapper {
-    flex-direction: row;
-    align-items: stretch;
-  }
-  .cell-inner {
-    align-self: stretch;
-  }
-
 }
