--- a/style.css
+++ b/style.css
@@ -91,12 +91,13 @@ ul {
 
 /* Navbar */
 .topnav {
-  /* position: fixed; */
+  position: sticky;
   top: 0;
   display: flex;
   justify-content: flex-end;
   font-family: "DM Sans", sans-serif;
-  background-color: #9ab87a50;
+  background-color: white;
+  box-shadow: 0px 2px 16px #444b6e;
   padding: 12pt;
   overflow: hidden;
 }
