--- a/style.css
+++ b/style.css
@@ -6,10 +6,10 @@
 
 /* headers */
 h1 {
-  margin: 20pt 0pt;
+  margin: 2rem;
   /* padding-bottom: 24pt; */
   font-family: "DM Serif Display", serif;
-  font-size: 144px;
+  font-size: 108px;
   font-weight: bolder;
   color: #444b6e;
 }
@@ -32,6 +32,7 @@ h4 {
   margin: 4pt 0pt;
   font-family: "DM Serif Display", serif;
   font-size: 24pt;
+  font-weight: lighter;
   color: #495b4c;
 }
 
@@ -39,6 +40,7 @@ h5 {
   margin: 4pt 0pt;
   font-family: "DM Serif Display", serif;
   font-size: 16pt;
+  font-weight: lighter;
   color: #444b6e;
 }
 
@@ -137,8 +139,7 @@ ul {
   padding: 24pt;
 }
 
-h3,
-h4 {
+h3, h4 {
   font-weight: lighter;
 }
 
@@ -229,7 +230,6 @@ footer div {
 
 section {
   width: 100%;
-  /* max-width: 100vw; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -237,15 +237,20 @@ section {
 }
 
 .top-level-cell {
-  text-align: start;
+  text-align: center;
   background-color: #444b6e;
 }
 
 .top-level-cell h1 {
   color: white;
-  /* text-align: start; */
   max-width: 80ch;
-  padding-right: auto;
+
+}
+
+.top-level-cell h5 {
+  margin: 1rem auto;
+  color: white;
+  max-width: 80ch;
 }
 
 .container {
